# mwe_glfw

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt  main.cpp
.github/workflows/: build.yml
src/: main.cpp
